finish what i've started.

--- a/Q5/MobileRefactoryId/app/src/main/res/values/strings.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="daily_stand_up">Daily Stand up</string>
     <string name="_09_00">09.00</string>
     <string name="strip">_</string>
+    <string name="sun_sept_14_2020">Sun, Sept 14 2020</string>
 </resources>
