--- a/Q5/MobileRefactoryId/app/src/main/res/values/strings.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="_09_00">09.00</string>
     <string name="strip">_</string>
     <string name="sun_sept_14_2020">Sun, Sept 14 2020</string>
+    <string name="task_list">Task List</string>
 </resources>
