complete the missing stuff

--- a/Q5/MobileRefactoryId/app/src/main/res/values/strings.xml
+++ b/Q5/MobileRefactoryId/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="strip">_</string>
     <string name="sun_sept_14_2020">Sun, Sept 14 2020</string>
     <string name="task_list">Task List</string>
+    <string name="m">M</string>
+    <string name="_14">14</string>
 </resources>
